2017-10-15  Markus Gans  <guru.mail@muenster.de>
	* FObject double free prevention of fc::empty_string

2017-10-14  Markus Gans  <guru.mail@muenster.de>
	* Fixed a bug in the FObject check of parent objects
	* Replace the deprecated readdir_r function (CVE-2013-4237)
	* First implementation of a tree view in the FListView 
	  class (alpha state)

2017-10-02  Markus Gans  <guru.mail@muenster.de>
	* DECSCUSR - Set Cursor Style support for VTE >= 0.40.0 and 
	  gnome-terminal >= 3.16
	* Checks if the FScrollview viewport fits into the print area

2017-10-02  Markus Gans  <guru.mail@muenster.de>
	* SGR and URXVT mouse support for coordinates greater-than 
	  255 columns or lines
	* Add copyright information to the source files

2017-09-21  Markus Gans  <guru.mail@muenster.de>
	* New data type FStringList introduced
	* Stream and assignment operator support for FLineEdit

2017-09-20  Markus Gans  <guru.mail@muenster.de>
	* FString has now got its own streaming functionality for 
	  inbound and outbound type conversion
	* Added stream and assignment operator support for FLabel

2017-09-19  Markus Gans  <guru.mail@muenster.de>
	* The command line help text is now available in all applications

2017-09-17  Markus Gans  <guru.mail@muenster.de>
	* FObject has received the iterator child access methods 
	  begin() and end()
	* All include files were moved to a separate directory
	* std::scanf used now fields with width limit

2017-09-15  Markus Gans  <guru.mail@muenster.de>
	* Fix byte access in data type char_data

2017-09-11  Markus Gans  <guru.mail@muenster.de>
	* Some code improvements 
	* Fix handling of negative numbers in FString::toLong()

2017-09-09  Markus Gans  <guru.mail@muenster.de>
	* Wrong UTF-8 string length fixed when attaching to FString

2017-09-07  Markus Gans  <guru.mail@muenster.de>
	* Type definition exported into a separate header file

2017-09-03  Markus Gans  <guru.mail@muenster.de>
	* Fixes wrong maximum line width in FListView
