@@ -4060,7 +4060,7 @@ void FTerm::init()
     setPalette (fc::DarkGray, 0x50, 0x50, 0x50);
     setPalette (fc::LightBlue, 0x80, 0xa4, 0xec);
     setPalette (fc::LightGreen, 0x54, 0xff, 0x54);
-    setPalette (fc::LightCyan, 0x49, 0xc9, 0xe3);
+    setPalette (fc::LightCyan, 0x62, 0xbf, 0xf8);
     setPalette (fc::LightRed, 0xff, 0x54, 0x54);
     setPalette (fc::LightMagenta, 0xff, 0x54, 0xff);
     setPalette (fc::Yellow, 0xff, 0xff, 0x54);
